<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/navigation_menu"
        android:checkableBehavior="single">



        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_asset"
            android:title="@string/asset" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification"/>


    </group>
    <group android:id="@+id/user_menu">
        <item
            android:title="@string/settings"
            android:id="@+id/settings"
            />
        <item
            android:title="@string/logout"
            android:id="@+id/logout"/>
    </group>

</menu>